--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -7,11 +7,14 @@ on:
 jobs:
   pypi:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.6 ,3.7 ,3.8 ,3.9]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: "3.8"
+          python-version: ${{ matrix.python-version }}
           architecture: x64
       - run: pip install tox
       - run: pip install poetry
@@ -19,7 +22,7 @@ jobs:
       - if: ${{ success() }}
         run: poetry build
       - if: ${{ success() }}
-        uses: pypa/gh-action-pypi-publish@v1.0.0a0
+        uses: pypa/gh-action-pypi-publish@v1.4.1
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
